k8s/cert-manager/template-fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-fastapi-deployment
spec:
  replicas: 2 # 任意のレプリカ数
  selector:
    matchLabels:
      app: template-fastapi
  template:
    metadata:
      labels:
        app: template-fastapi
    spec:
      containers:
      - name: template-fastapi
        image: ks6088ts/template-fastapi:0.0.11
        ports:
        - containerPort: 8000
        command: ["fastapi", "run", "main.py", "--host", "0.0.0.0", "--port", "8000"]
---
apiVersion: v1
kind: Service
metadata:
  name: template-fastapi-service
spec:
  selector:
    app: template-fastapi
  ports:
    - protocol: TCP
      port: 80 # Serviceのポート
      targetPort: 8000 # Podのポート
  type: ClusterIP # Ingress Controllerがサービスにアクセスするため、ClusterIPで十分
